--- a/_config.yml
+++ b/_config.yml
@@ -10,21 +10,37 @@
 ############################
 
 # Name of website
-title: My Website
+title: Cadiboo's Projects
 
 # Your name to show in the footer
-author: Some Person
+author: Cadiboo
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
+  Tutorials:
+    - All Tutorials: "https://cadiboo.github.io/tutorials/"
+    - 1.15: "https://cadiboo.github.io/tutorials/1.15.1/"
+    - Forge 1.15.1: "https://cadiboo.github.io/tutorials/1.15.1/forge/"
+    - 1.14: "https://cadiboo.github.io/tutorials/1.14.4/"
+    - Forge 1.14.4: "https://cadiboo.github.io/tutorials/1.14.4/forge/"
+    - 1.13: "https://cadiboo.github.io/tutorials/1.13.2/"
+    - Forge 1.13.2: "https://cadiboo.github.io/tutorials/1.13.2/forge/"
+    - 1.12: "https://cadiboo.github.io/tutorials/1.12.2/"
+    - Forge 1.12.2: "https://cadiboo.github.io/tutorials/1.12.2/"
+  Projects:
+    - All Projects: "https://cadiboo.github.io/projects/"
+    - NoCubes: "https://cadiboo.github.io/projects/nocubes/"
+    - RenderChunk rebuildChunk Hooks: "https://cadiboo.github.io/projects/renderchunk-rebuildchunk-hooks/"
+    - WIPTech: "https://cadiboo.github.io/projects/wiptech/"
   About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - GitHub Pages: "https://pages.github.com/"
+    - Site Source: "https://github.com/Cadiboo/Cadiboo.github.io"
 
 ################
 # --- Logo --- #
@@ -49,33 +65,13 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
-#  medium: yourname
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
-#  discord: invite/invite_code or users/userid 
-#  kaggle: yourname
-#  hackerrank: yourname
+  email: "cadiboodev@gmail.com"
+  github: Cadiboo
+  discord: Cadiboo#8887
+  twitter: Cadiboo1
+  stackoverflow: "8453728/cadiboo"
+  youtube: c/UCPcIerMYjlsb2jTKe--Da7g
+  twitch: cadiboo
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
@@ -87,14 +83,13 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
-  vk: false
+  email: true
+  github: true
+  discord: true
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "Home"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -110,11 +105,6 @@ post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
 edit_page_button: true
-
-# Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
-# If this setting is off, then long sub-menu words might get cut off
-# See https://github.com/daattali/beautiful-jekyll/issues/765 to understand the issue this setting can solve
-navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
 #keywords: "my,list,of,keywords"
@@ -160,7 +150,7 @@ footer-hover-col: "#0085A1"
 #################################
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "UA-130580840-1"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 #google_analytics: ""
